--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation "androidx.compose.foundation:foundation"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-graphics"
+    implementation "com.google.android.material:material:1.7.0"
 
     // Android Studio Preview support
     implementation "androidx.compose.ui:ui-tooling-preview"
