--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,6 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 }
