--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20' apply false
     id 'com.google.android.gms.oss-licenses-plugin' version '0.10.6' apply false // This required workaround in settings.gradle
+    id 'com.google.gms.google-services' version '4.3.14' apply false
+    id 'com.google.firebase.crashlytics' version '2.9.2' apply false
 }
