--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,36 +17,39 @@ on:
 jobs:
   build:
     name: Setup Environment and build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code to specific branch
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.inputs.branch }}
-            
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-                
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-              
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-            
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+      - name: Testing
+        run: echo 'Testing job'
 
-      - name: Generate app bundle
-        run: ./gradlew app:bundleRelease --stacktrace
+      #- name: Checkout the code to specific branch
+      #  uses: actions/checkout@v2
+      #  with:
+      #    ref: ${{ github.event.inputs.branch }}
+            
+      #- name: Set up JDK
+      #  uses: actions/setup-java@v2
+      #  with:
+      #    distribution: 'zulu'
+      #    java-version: '11'
+                
+      #- name: Setup Android SDK
+      #  uses: android-actions/setup-android@v2
+              
+      #- uses: actions/cache@v2
+      #  with:
+      #    path: |
+      #      ~/.gradle/caches
+      #      ~/.gradle/wrapper
+      #    key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      #    restore-keys: |
+      #      ${{ runner.os }}-gradle-
+            
+      #- name: Make gradlew executable
+      #  run: chmod +x ./gradlew
+
+      #- name: Generate app bundle
+      #  run: ./gradlew app:bundleRelease --stacktrace
         
       #- name: Sign app bundle
       #  run: |
