--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,38 +19,35 @@ jobs:
     name: Setup Environment and build
     runs-on: ubuntu-latest
     steps:
-      - name: Testing
-        run: echo 'Testing job'
-
       - name: Checkout the code to specific branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
 
-      #- name: Set up JDK
-      #  uses: actions/setup-java@v2
-      #  with:
-      #    distribution: 'zulu'
-      #    java-version: '11'
-                
-      #- name: Setup Android SDK
-      #  uses: android-actions/setup-android@v2
-              
-      #- uses: actions/cache@v2
-      #  with:
-      #    path: |
-      #      ~/.gradle/caches
-      #      ~/.gradle/wrapper
-      #    key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-      #    restore-keys: |
-      #      ${{ runner.os }}-gradle-
-            
-      #- name: Make gradlew executable
-      #  run: chmod +x ./gradlew
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '11'
 
-      #- name: Generate app bundle
-      #  run: ./gradlew app:bundleRelease --stacktrace
-        
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+              
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Generate app bundle
+        run: ./gradlew app:bundleRelease --stacktrace
+
       #- name: Sign app bundle
       #  run: |
       #    jarsigner -keystore app/*.jks \
