--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
+          
+      - name: Trying files
+        env:
+          ALIAS: ${{ secrets.ALIAS }}
+        run: echo keyAlias=$ALIAS > ./testfile.properties
 
       - name: Set up JDK
         uses: actions/setup-java@v3
