--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
 
       - run: echo plainVariable=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
       - run: echo plainVariable2=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
+      - run:
+          echo plainVariable3=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
+          echo plainVariable4=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
       - run: cat ./testing.properties
       
       #- name: Testing files
