--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,12 @@ jobs:
           fileDir: './keystore/'
           encodedString: ${{ secrets.SIGNING_KEY }}
 
-      - run: echo plainVariable=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
-      - run: echo plainVariable2=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
-      - run:
-          echo -e "plainVariable3=${{ vars.PLAIN_VARIABLE }} \n \
-          plainVariable4=${{ vars.PLAIN_VARIABLE }}" >> ./testing.properties
-      - run: cat ./testing.properties
+      #- run: echo plainVariable=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
+      #- run: echo plainVariable2=${{ vars.PLAIN_VARIABLE }} >> ./testing.properties
+      #- run:
+      #    echo -e "plainVariable3=${{ vars.PLAIN_VARIABLE }} \n
+      #    plainVariable4=${{ vars.PLAIN_VARIABLE }}" >> ./testing.properties
+      #- run: cat ./testing.properties
       
       #- name: Testing files
       #  env:
@@ -54,11 +54,11 @@ jobs:
           STORE_FILE: 'keystore/upload-keystore.jks'
           #STORE_FILE: ${{ steps.write_file.outputs.filePath }}
         run:
-          echo storePassword=$KEY_STORE_PASSWORD > ./keystore.properties
-          echo keyPassword=$KEY_PASSWORD >> ./keystore.properties
-          echo keyAlias=$ALIAS >> ./keystore.properties
-          echo storeFile=keystore/upload-keystore.jks >> ./keystore.properties
-          #echo storeFile=$STORE_FILE > ./keystore.properties
+          echo -e "storePassword=$KEY_STORE_PASSWORD\n
+          echo keyPassword=$KEY_PASSWORD\n
+          echo keyAlias=$ALIAS\n
+          echo storeFile=$STORE_FILE > ./keystore.properties
+          #echo storeFile=keystore/upload-keystore.jks >> ./keystore.properties
 
       - name: Set up JDK
         uses: actions/setup-java@v3
