--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,14 @@ jobs:
           name: TestResults
           path: app/build/reports/tests
 
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: Unit Tests
+          path: app/build/reports/test-results/**/*.xml    # Path to test results
+          reporter: java-junit        # Format of test results
+
   # Step 2 : Upload the Artifact
   #upload:
   #  needs: [ build ]
