--- a/.github/workflows/tagging_test.yml
+++ b/.github/workflows/tagging_test.yml
@@ -22,7 +22,7 @@ jobs:
         abbrev: false
         #include: 'v*'
         #exclude: '*-rc*'
-     #   commit-ish: 'HEAD~'
+        commit-ish: 'HEAD'
         # if you unshallow in a separate step, use the following option:
         # skip-unshallow: 'true'
     - name: Show Tag
