--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Checkout the code to specific branch
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           ref: ${{ github.event.inputs.branch }}
 
       - name: Prepare Keystore
