--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ def getVersionCode = { ->
         return Integer.parseInt(stdout.toString().trim())
     }
     catch (ignored) {
+        // TODO Return 1 and print some note about error with git repo?
         return -1
     }
 }
@@ -100,7 +101,9 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.0'
+        // Check Compose Compiler vs Kotlin compatibility from here:
+        // https://developer.android.com/jetpack/androidx/releases/compose-kotlin
+        kotlinCompilerExtensionVersion '1.4.4'
     }
     packagingOptions {
         resources {
@@ -110,7 +113,7 @@ android {
 }
 
 dependencies {
-    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
+    def composeBom = platform('androidx.compose:compose-bom:2023.03.00')
     implementation composeBom
     androidTestImplementation composeBom
 
@@ -137,14 +140,14 @@ dependencies {
 
     // Others
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
-    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.0'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
     // Firebase Crashlytics
-    releaseImplementation platform('com.google.firebase:firebase-bom:31.2.3')
+    releaseImplementation platform('com.google.firebase:firebase-bom:31.3.0')
     releaseImplementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
