--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,7 @@ plugins {
     id 'com.google.gms.google-services' version '4.3.15' apply false
     id 'com.google.firebase.crashlytics' version '2.9.5' apply false
 }
+
+// Temporary workaround for bug: Compose 1.5.0-rc01 requires SDK34 (https://issuetracker.google.com/issues/293645018?pli=1)
+// TODO Make sure to remove this workaround when possible.
+allprojects { configurations.configureEach { resolutionStrategy { force 'androidx.emoji2:emoji2:1.3.0' }}}
