--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,7 +116,7 @@ android {
 }
 
 dependencies {
-    def composeBom = platform('androidx.compose:compose-bom:2023.08.00')
+    def composeBom = platform('androidx.compose:compose-bom:2023.09.01')
     implementation composeBom
     androidTestImplementation composeBom
 
@@ -142,15 +142,15 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Others
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.core:core-ktx:1.10.1' // TODO: androidx.core:core-ktx:1.12.0 requires API 34
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.7.2'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.1'
 
     // Firebase Crashlytics
-    releaseImplementation platform('com.google.firebase:firebase-bom:32.2.3')
+    releaseImplementation platform('com.google.firebase:firebase-bom:32.3.1')
     releaseImplementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'
