--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,7 +116,7 @@ android {
 }
 
 dependencies {
-    def composeBom = platform('androidx.compose:compose-bom:2023.09.01')
+    def composeBom = platform('androidx.compose:compose-bom:2023.10.00')
     implementation composeBom
     androidTestImplementation composeBom
 
@@ -125,7 +125,7 @@ dependencies {
     implementation "androidx.compose.foundation:foundation"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-graphics"
-    implementation "com.google.android.material:material:1.9.0"
+    implementation "com.google.android.material:material:1.9.0" // TODO 1.10.0
 
     // Android Studio Preview support
     implementation "androidx.compose.ui:ui-tooling-preview"
@@ -144,7 +144,7 @@ dependencies {
     // Others
     implementation 'androidx.core:core-ktx:1.10.1' // TODO: androidx.core:core-ktx:1.12.0 requires API 34
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.7.2' // TODO: androidx.activity:activity-compose:1.8.0 requires API 34
 
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.1'
