--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'kotlinx-serialization'
     id 'com.google.android.gms.oss-licenses-plugin'
+    id 'base'
 
     // Comment out following two lines if building without Crashlytics
     id 'com.google.gms.google-services'
@@ -59,6 +60,11 @@ def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
+// Fix for deprecated BasePluginConvention feature
+base {
+    archivesName = "WifiRadar-" + getVersionName() // Add version tag to apk name
+}
+
 android {
     signingConfigs {
         releaseSigningConfig {
@@ -77,7 +83,6 @@ android {
         targetSdk 34
         versionCode getVersionCode()
         versionName getVersionName()
-        setProperty("archivesBaseName", "WifiRadar-" + getVersionName() ) // Add version tag to apk name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
