Add dependabot group for android gradle plugin

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,7 @@ updates:
       kotlin:
         patterns:
           - "org.jetbrains.kotlin.*"
+      android-gradle-plugin:
+        patterns:
+          - "com.android.application"
+          - "com.android.library"
