--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,21 +7,21 @@
  *
  * Build without Crashlytics:
  * - Comment out following two lines from 'plugin' section
- *       id 'com.google.gms.google-services'
- *       id 'com.google.firebase.crashlytics'
+ *       alias libs.plugins.googleServices
+ *       alias libs.plugins.firebaseCrashlytics
  */
 
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.plugin.serialization'
+    alias libs.plugins.androidApplication
+    alias libs.plugins.jetbrainsKotlin
+    alias libs.plugins.jetbrainsKotlinSerialization
     id 'kotlinx-serialization'
-    id 'com.google.android.gms.oss-licenses-plugin'
+    alias libs.plugins.ossLicenses
     id 'base'
 
     // Comment out following two lines if building without Crashlytics
-    id 'com.google.gms.google-services'
-    id 'com.google.firebase.crashlytics'
+    alias libs.plugins.googleServices
+    alias libs.plugins.firebaseCrashlytics
 }
 
 def getVersionCode = { ->
@@ -122,42 +122,41 @@ android {
 }
 
 dependencies {
-    def composeBom = platform('androidx.compose:compose-bom:2024.02.01')
-    implementation composeBom
-    androidTestImplementation composeBom
+    implementation platform(libs.compose.bom)
+    androidTestImplementation platform(libs.compose.bom)
 
     // Material Design 3 (or foundational components, or main API)
-    implementation 'androidx.compose.material3:material3'
-    implementation "androidx.compose.foundation:foundation"
-    implementation "androidx.compose.ui:ui"
-    implementation "androidx.compose.ui:ui-graphics"
-    implementation "com.google.android.material:material:1.11.0"
+    implementation libs.androidx.compose.material3
+    implementation libs.androidx.compose.foundation
+    implementation libs.androidx.compose.ui
+    implementation libs.androidx.compose.ui.graphics
+    implementation libs.material
 
     // Android Studio Preview support
-    implementation "androidx.compose.ui:ui-tooling-preview"
-    debugImplementation "androidx.compose.ui:ui-tooling"
+    implementation libs.androidx.compose.ui.tooling.preview
+    debugImplementation libs.androidx.compose.ui.tooling
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
-    debugImplementation "androidx.compose.ui:ui-test-manifest"
+    androidTestImplementation libs.androidx.compose.ui.test.junit4
+    debugImplementation libs.androidx.compose.ui.test.manifest
 
     // Unit Tests
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'com.google.truth:truth:1.4.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation libs.junit
+    testImplementation libs.truth
+    androidTestImplementation libs.ext.junit
+    androidTestImplementation libs.espresso.core
 
     // Others
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation libs.core.ktx
+    implementation libs.lifecycle.runtime.ktx
+    implementation libs.activity.compose
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
-    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.1'
+    implementation libs.kotlinx.serialization.json
+    implementation libs.play.services.oss.licenses
 
     // Firebase Crashlytics
-    releaseImplementation platform('com.google.firebase:firebase-bom:32.7.3')
-    releaseImplementation 'com.google.firebase:firebase-crashlytics-ktx'
+    releaseImplementation platform(libs.firebase.bom)
+    releaseImplementation libs.firebase.crashlytics.ktx
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.13'
+    debugImplementation libs.leakcanary.android
 }
