--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '8.3.0' apply false
-    id 'com.android.library' version '8.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22' apply false
-    id 'com.google.android.gms.oss-licenses-plugin' version '0.10.6' apply false // This required workaround in settings.gradle
-    id 'com.google.gms.google-services' version '4.4.1' apply false
-    id 'com.google.firebase.crashlytics' version '2.9.9' apply false
+    alias libs.plugins.androidApplication apply false
+    alias libs.plugins.androidLibrary apply false
+    alias libs.plugins.jetbrainsKotlin apply false
+    alias libs.plugins.jetbrainsKotlinSerialization apply false
+    alias libs.plugins.ossLicenses apply false  // This required workaround in settings.gradle
+    alias libs.plugins.googleServices apply false
+    alias libs.plugins.firebaseCrashlytics apply false
 }
