--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 agp = "8.3.0"
 kotlin = "1.9.22"
-androidxComposeCompiler = "1.5.10"
+# androidxComposeCompiler = "1.5.10"
 activityCompose = "1.8.2"
-composeBom = "2024.02.01"
+composeBom = "2024.02.02"
 coreKtx = "1.12.0"
 espressoCore = "3.5.1"
-firebaseBom = "32.7.3"
+firebaseBom = "32.7.4"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 kotlinxSerializationJson = "1.6.3"
