Add more to version catalog, better ordering

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,12 +75,12 @@ android {
         }
     }
     namespace 'com.korsumaki.wifiradar'
-    compileSdk 34
+    compileSdk libs.versions.compileSdk.get().toInteger()
 
     defaultConfig {
         applicationId "com.korsumaki.wifiradar"
-        minSdk 28
-        targetSdk 34
+        minSdk libs.versions.minSdk.get().toInteger()
+        targetSdk libs.versions.targetSdk.get().toInteger()
         versionCode getVersionCode()
         versionName getVersionName()
 
@@ -112,7 +112,7 @@ android {
     composeOptions {
         // Check Compose Compiler vs Kotlin compatibility from here:
         // https://developer.android.com/jetpack/androidx/releases/compose-kotlin
-        kotlinCompilerExtensionVersion '1.5.10'
+        kotlinCompilerExtensionVersion libs.versions.androidxComposeCompiler.get()
     }
     packagingOptions {
         resources {
@@ -122,15 +122,15 @@ android {
 }
 
 dependencies {
-    implementation platform(libs.compose.bom)
-    androidTestImplementation platform(libs.compose.bom)
+    implementation platform(libs.androidx.compose.bom)
+    androidTestImplementation platform(libs.androidx.compose.bom)
 
     // Material Design 3 (or foundational components, or main API)
     implementation libs.androidx.compose.material3
     implementation libs.androidx.compose.foundation
     implementation libs.androidx.compose.ui
     implementation libs.androidx.compose.ui.graphics
-    implementation libs.material
+    implementation libs.android.material
 
     // Android Studio Preview support
     implementation libs.androidx.compose.ui.tooling.preview
@@ -143,13 +143,13 @@ dependencies {
     // Unit Tests
     testImplementation libs.junit
     testImplementation libs.truth
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
+    androidTestImplementation libs.androidx.test.ext.junit
+    androidTestImplementation libs.androidx.test.espresso.core
 
     // Others
-    implementation libs.core.ktx
-    implementation libs.lifecycle.runtime.ktx
-    implementation libs.activity.compose
+    implementation libs.androidx.core.ktx
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.androidx.activity.compose
 
     implementation libs.kotlinx.serialization.json
     implementation libs.play.services.oss.licenses
